FindBugs, PMD, replaces in random, ~+30% speed gen, minor plus in speed renders